--- a/daily-scheduler.html
+++ b/daily-scheduler.html
@@ -238,18 +238,17 @@
       return milestonesData.filter(m => m.projectId === projectId && m.status !== 'Completed').length;
     }
 
-// Robust days-since-worked using several fallbacks
+// Robust days-since-worked using Last Worked → Intake → Date Created → created_time
 function getDaysSinceWorked(project, today) {
   const parse = d => (d ? new Date(d) : null);
-  const lastWorked = parse(project.lastWorked);
-  const intake = parse(project.intakeDate || project.intake_date);
-  const created =
-    parse(project.createdTime) ||
-    parse(project.createdAt) ||
-    parse(project.created);
 
-  const ref = lastWorked || intake || created;
-  if (!ref) return 0;               // treat as fresh if unknown
+  const lastWorked  = parse(project.lastWorked);
+  const intake      = parse(project.intakeDate || project.intake_date);
+  const dateCreated = parse(project.dateCreated);          // <-- from API mapping
+  const createdTime = parse(project.createdTime);          // <-- from API mapping
+
+  const ref = lastWorked || intake || dateCreated || createdTime;
+  if (!ref) return null;                                   // unknown (don’t fake “today”)
   return Math.max(0, Math.floor((today - ref) / (1000 * 60 * 60 * 24)));
 }
 
@@ -271,11 +270,14 @@ function getDaysSinceWorked(project, today) {
         const dueDate = task.project.dueDate ? new Date(task.project.dueDate) : new Date(Date.now() + 14*24*60*60*1000);
         const daysUntilDue = Math.ceil((dueDate - today) / (1000 * 60 * 60 * 24));
 
-        const daysSinceWorked = getDaysSinceWorked(task.project, today);
+       const rawDSW = getDaysSinceWorked(task.project, today);
+       const daysSinceWorked = rawDSW ?? 0; 
+        
 
         const overdue = daysUntilDue < 0;
         const dueUrgencyBuffered = overdue ? 1 : clamp((dueBufferDays - daysUntilDue) / dueBufferDays, 0, 1);
         const complexityScore = ((task.project.complexity || 3) / 5);
+        
         const neglectBoost = clamp(daysSinceWorked / 14, 0, 1);
         const quickWinBoost = isQuickWin(task) ? 1 : 0;
 
@@ -400,15 +402,12 @@ function getDaysSinceWorked(project, today) {
             item.daysUntilDue <= 3 ? '🔥 Due soon' :
             item.daysUntilDue <= 7 ? '📅 Due this week' : '✅ On track';
 
-          const dsw = item.daysSinceWorked ?? null;
+          const dsw = (typeof item.daysSinceWorked === 'number') ? item.daysSinceWorked : null;
 const workedText =
-  dsw === null
-    ? '' // unknown
-    : dsw === 0
-      ? '🟢 touched today'
-      : dsw === 1
-        ? '⏰ 1 day since worked'
-        : `⏰ ${dsw} days since worked`;
+  dsw === null ? '' :
+  dsw === 0    ? '🟢 touched today' :
+  dsw === 1    ? '⏰ 1 day since worked' :
+                 `⏰ ${dsw} days since worked`;
 
 
           const complexClass = item.isComplex ? 'complex' : '';
