--- a/daily-scheduler.html
+++ b/daily-scheduler.html
@@ -220,16 +220,16 @@
     function clamp(x, min, max) { return Math.max(min, Math.min(max, x)); }
 
     function totalProjectHours(projectId) {
-      const list = milestonesData.filter(m => m.projectId === projectId && m.status !== 'Completed');
-      return list.reduce((acc, m) => acc + (m.estimatedHours || 0), 0);
-    }
+  const list = milestonesData.filter(m => m.projectId === projectId && m.status !== 'Completed');
+  return list.reduce((acc, m) => acc + (m.estimatedHours || 0), 0);
+}
 
     function isQuickWin(task) {
-      const c = task.project.complexity || 3;
-      if (c >= 4) return false; // only complexity 1–3 qualify
-      const totalHrs = totalProjectHours(task.project.id);
-      return totalHrs <= 2; // project total ≤ 2h
-    }
+  const c = Number(task.project.complexity) || 3;   // numeric 1–5
+  if (c >= 4) return false;                         // only C1–C3 qualify
+  const totalHrs = totalProjectHours(task.project.id);
+  return totalHrs <= 2;                             // ≤ 2h project total
+}
 
     function remainingComplexMilestones(projectId) {
       const project = projectsData.find(p => p.id === projectId);
@@ -252,19 +252,29 @@ function getDaysSinceWorked(project, today) {
   return Math.max(0, Math.floor((today - ref) / (1000 * 60 * 60 * 24)));
 }
 
-// Calendar-day difference ignoring time-of-day
+// Calendar-day difference ignoring time-of-day drift
 function daysUntilDueCalendar(dueStr) {
-  if (!dueStr) return 9999; // no due date = very far away
+  if (!dueStr) return 9999; // no due date = far away
+  const t = new Date();
+  const today0 = new Date(t.getFullYear(), t.getMonth(), t.getDate());
 
-  const today = new Date();
-  // strip time: compare midnights
-  const startToday = new Date(today.getFullYear(), today.getMonth(), today.getDate());
+  const d = new Date(dueStr);
+  const due0 = new Date(d.getFullYear(), d.getMonth(), d.getDate());
 
-  const due = new Date(dueStr);
-  const startDue = new Date(due.getFullYear(), due.getMonth(), due.getDate());
+  return Math.round((due0 - today0) / (1000 * 60 * 60 * 24)); // negative if overdue
+}
 
-  const ms = startDue - startToday;
-  return Math.round(ms / (1000 * 60 * 60 * 24)); // negative if overdue
+// Build days-since-worked from a real baseline
+function getDaysSinceWorked(project, today) {
+  const parse = s => (s ? new Date(s) : null);
+
+  const ref = parse(project.lastWorked)
+           || parse(project.intakeDate)
+           || parse(project.dateCreated)
+           || parse(project.createdTime);
+
+  if (!ref) return null;  // unknown baseline
+  return Math.max(0, Math.floor((today - ref) / (1000 * 60 * 60 * 24)));
 }
 
     // ---------------------------
