--- a/project-management.html
+++ b/project-management.html
@@ -754,7 +754,7 @@
             
             // Set up drag and drop for milestones if they exist
             setTimeout(() => {
-                setupDragAndDrop();
+                initializeDragAndDrop();
             }, 100);
         }
 
