--- a/project-management.html
+++ b/project-management.html
@@ -765,8 +765,9 @@
             
             document.getElementById('editorContent').innerHTML = content;
             
-            // Initialize auto-split preview
+            // Initialize auto-split preview and drag-and-drop
             previewAutoSplit();
+            setupDragAndDrop();
         }
 
         function renderMilestoneList() {
