--- a/project-management.html
+++ b/project-management.html
@@ -765,9 +765,8 @@
             
             document.getElementById('editorContent').innerHTML = content;
             
-            // Initialize auto-split preview and drag-and-drop
+            // Initialize auto-split preview
             previewAutoSplit();
-            setupDragAndDrop();
         }
 
         function renderMilestoneList() {
