--- a/project-management.html
+++ b/project-management.html
@@ -546,7 +546,17 @@
               </div>
               <div class="form-group">
                 <label>Instrument Type</label>
-                <input type="text" id="instrumentType" value="${escapeHtml(currentProject.instrumentType || '')}" onchange="markChanged()">
+                <select id="instrumentType" onchange="markChanged()">
+                  <option value="">Select Type</option>
+                  <option value="Electric Guitar" ${currentProject.instrumentType === 'Electric Guitar' ? 'selected' : ''}>Electric Guitar</option>
+                  <option value="Acoustic Guitar" ${currentProject.instrumentType === 'Acoustic Guitar' ? 'selected' : ''}>Acoustic Guitar</option>
+                  <option value="Classical Guitar" ${currentProject.instrumentType === 'Classical Guitar' ? 'selected' : ''}>Classical Guitar</option>
+                  <option value="Bass Guitar" ${currentProject.instrumentType === 'Bass Guitar' ? 'selected' : ''}>Bass Guitar</option>
+                  <option value="Mandolin" ${currentProject.instrumentType === 'Mandolin' ? 'selected' : ''}>Mandolin</option>
+                  <option value="Banjo" ${currentProject.instrumentType === 'Banjo' ? 'selected' : ''}>Banjo</option>
+                  <option value="Ukulele" ${currentProject.instrumentType === 'Ukulele' ? 'selected' : ''}>Ukulele</option>
+                  <option value="Other" ${currentProject.instrumentType === 'Other' ? 'selected' : ''}>Other</option>
+                </select>
               </div>
               <div class="form-group">
                 <label>String Brand</label>
