--- a/project-management.html
+++ b/project-management.html
@@ -548,14 +548,13 @@
                 <label>Instrument Type</label>
                 <select id="instrumentType" onchange="markChanged()">
                   <option value="">Select Type</option>
-                  <option value="Electric Guitar" ${currentProject.instrumentType === 'Electric Guitar' ? 'selected' : ''}>Electric Guitar</option>
-                  <option value="Acoustic Guitar" ${currentProject.instrumentType === 'Acoustic Guitar' ? 'selected' : ''}>Acoustic Guitar</option>
-                  <option value="Classical Guitar" ${currentProject.instrumentType === 'Classical Guitar' ? 'selected' : ''}>Classical Guitar</option>
-                  <option value="Bass Guitar" ${currentProject.instrumentType === 'Bass Guitar' ? 'selected' : ''}>Bass Guitar</option>
-                  <option value="Mandolin" ${currentProject.instrumentType === 'Mandolin' ? 'selected' : ''}>Mandolin</option>
+                  <option value="Guitar" ${currentProject.instrumentType === 'Guitar' ? 'selected' : ''}>Guitar</option>
                   <option value="Banjo" ${currentProject.instrumentType === 'Banjo' ? 'selected' : ''}>Banjo</option>
-                  <option value="Ukulele" ${currentProject.instrumentType === 'Ukulele' ? 'selected' : ''}>Ukulele</option>
-                  <option value="Other" ${currentProject.instrumentType === 'Other' ? 'selected' : ''}>Other</option>
+                  <option value="Bass" ${currentProject.instrumentType === 'Bass' ? 'selected' : ''}>Bass</option>
+                  <option value="Mandolin" ${currentProject.instrumentType === 'Mandolin' ? 'selected' : ''}>Mandolin</option>
+                  <option value="12 string guitar" ${currentProject.instrumentType === '12 string guitar' ? 'selected' : ''}>12 string guitar</option>
+                  <option value="Pickup" ${currentProject.instrumentType === 'Pickup' ? 'selected' : ''}>Pickup</option>
+                  <option value="Classical Guitar" ${currentProject.instrumentType === 'Classical Guitar' ? 'selected' : ''}>Classical Guitar</option>
                 </select>
               </div>
               <div class="form-group">
