--- a/project-management.html
+++ b/project-management.html
@@ -529,7 +529,8 @@
           </div>
         </div>
 
-       
+        <!-- TEMPORARILY COMMENTED OUT - Instrument Details Section -->
+        <!-- 
         <div class="form-section collapsible-section">
           <h3 onclick="toggleCollapsible('instrumentDetails')">
             <span id="instrumentDetailsToggle" class="collapsible-toggle">▶</span>
@@ -539,7 +540,7 @@
             ... instrument details form content ...
           </div>
         </div>
-       
+        -->
 
         <!-- TEMPORARILY COMMENTED OUT - Actions Section -->
         <!--
