--- a/project-management.html
+++ b/project-management.html
@@ -1411,7 +1411,4 @@
     }
   </script>
 </body>
-</html>s{display:grid;grid-template-columns:repeat(auto-fit,minmax(120px,1fr));gap:10px}
-    .billing-stat{text-align:center;padding:8px;background:rgba(255,255,255,0.7);border-radius:4px}
-    .billing-stat .value{font-size:18px;font-weight:bold;color:#1976d2}
-    .billing-stat
+</html>
